[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cron-doctor"
version = "1.0.0"
description = "Zero-deps-ish CLI that diagnoses cron.yaml files — syntax, semantics, dependencies, and schema."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "sigco3111"},
]
keywords = ["cron", "yaml", "linter", "validator", "cli", "hermes", "github-actions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cron-doctor = "cron_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/sigco3111/cron-doctor"
Issues = "https://github.com/sigco3111/cron-doctor/issues"
Changelog = "https://github.com/sigco3111/cron-doctor/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
